--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Easy</string>
+    <string name="list">列表</string>
+    <string name="photo">照片</string>
+
+    <string name="loading">加载</string>
 </resources>
