--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="photo">照片</string>
 
     <string name="loading">加载</string>
+    <string name="preview">预览</string>
+    <string name="finish">完成</string>
 </resources>
