--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="finish">完成</string>
     <string name="ok">确定</string>
     <string name="link_name_cannot_empty">链接名称不能为空</string>
+    <string name="edit">编辑</string>
 </resources>
