--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,12 @@
     <string name="camera">相机</string>
     <string name="album">相册</string>
     <string name="calendar">日历</string>
+    <string name="sync">同步</string>
+    <string name="account">账户</string>
+    <string name="notebook">日记本</string>
+    <string name="password_and_fingerprint">密码 + 指纹</string>
+    <string name="remind">提醒</string>
+    <string name="about">关于</string>
 
     <string-array name="journal_item_options">
         <item>删除</item>
