--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="about">关于</string>
     <string name="change_password">修改密码</string>
     <string name="fingerprint_unlock">指纹解锁</string>
+    <string name="input_new_password">请输入新密码</string>
+    <string name="input_current_password">请输入当前密码</string>
+    <string name="input_new_password_again">请再次输入新密码</string>
+    <string name="password_unconsistent">两次输入密码不一致，请从重新输入</string>
 
     <string-array name="journal_item_options">
         <item>删除</item>
