--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="input_current_password">请输入当前密码</string>
     <string name="input_new_password_again">请再次输入新密码</string>
     <string name="password_unconsistent">两次输入密码不一致，请从重新输入</string>
+    <string name="journal_alarm">日记提醒</string>
+    <string name="alarm_time">提醒时间</string>
 
     <string-array name="journal_item_options">
         <item>删除</item>
