--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="album">相册</string>
     <string name="calendar">日历</string>
     <string name="sync">同步</string>
-    <string name="account">账户</string>
+    <string name="account">账号</string>
     <string name="notebook">日记本</string>
     <string name="password_and_fingerprint">密码 + 指纹</string>
     <string name="password">密码</string>
@@ -27,6 +27,11 @@
     <string name="password_unconsistent">两次输入密码不一致，请从重新输入</string>
     <string name="journal_alarm">日记提醒</string>
     <string name="alarm_time">提醒时间</string>
+    <string name="register">注册</string>
+    <string name="password_confirm">密码确认</string>
+    <string name="email">邮箱</string>
+    <string name="account_or_email">账号/邮箱</string>
+    <string name="login">登录</string>
 
     <string-array name="journal_item_options">
         <item>删除</item>
